--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
             "email": "thibaud.canaud@gmail.com"
         }
     ],
-    "minimum-stability": "beta",
+    "minimum-stability": "dev",
+    "require": {
+        "php": ">=5.3.0"
+    },
 
     "autoload" : {
         "psr-4" :   {"CT\\Grapes\\" : "CT/Grapes"}
