--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,6 @@
     "name": "0xct/grapes",
     "description": "Framework PHP",
     "type": "Framework",
-    "require": {
-        "twig/twig": "^1.27"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -14,7 +11,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "twig/twig": "^1.27"
     },
 
     "autoload" : {
