--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
             "email": "thibaud.canaud@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
+    },
+    "require-dev": {
         "twig/twig": "^1.27"
     },
-
     "autoload" : {
         "psr-4" :   {"CT\\Grapes\\" : "CT/Grapes"}
     }
