--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.3.0",
     },
     "require-dev": {
-        "twig/twig": "^1.27"
+        "twig/twig": "^1.27",
     },
     "autoload" : {
         "psr-4" :   {"CT\\Grapes\\" : "CT/Grapes"}
