--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": ">=5.2.7"
     },
     "require-dev": {
-        "twig/twig": "^1.27",
+        "twig/twig": "~1.0",
     },
     "autoload" : {
         "psr-4" :   {"CT\\Grapes\\" : "CT/Grapes"}
