--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "thibaud.canaud@gmail.com"
         }
     ],
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "require": {
         "twig/twig": "~1.0",
         "0xct/grapes": "*"
