--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,6 @@
         "0xct/grapes": "*"
     },
     "require-dev" : {
-        
-        "twig/twig": "~1.0",
+        "twig/twig": "~1.0"
     }
-
 }
