--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
             "email": "thibaud.canaud@gmail.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "twig/twig": "1.*"
     },
