--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     "keywords": ["Framework","EasyToUse"],
     "homepage": "http://www.thibaudcanaud.fr/",
     "license": "MIT",
+    "version": "3.0.0",
     "authors": [
         {
             "name": "0xCT",
             "email": "thibaud.canaud@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
-        "twig/twig": "1.*"
+        "twig/twig": "*"
     },
     "autoload" : {
         "psr-4" :   {"CT\\Grapes\\" : "CT/Grapes"}
