--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "homepage": "http://www.thibaudcanaud.fr/",
     "license": "MIT",
     "version": "3.0.0",
+    "minimum-stability" : "dev",
+    "prefer-stable" : true,
     "authors": [
         {
             "name": "0xCT",
