--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "keywords": ["Framework","EasyToUse"],
     "homepage": "http://www.thibaudcanaud.fr/",
     "license": "MIT",
-    "version": "v1.0.0",
+    "version": "1.0.0-dev",
     "authors": [
         {
             "name": "0xCT",
